welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:3: error: type mismatch;
 found   : Int
 required: Boolean
  if (a%3){
       ^fizzBuzz:6: error: type mismatch;
 found   : Int
 required: Boolean
  if (a%5){
       ^